--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,12 +8,12 @@
 
 .header > .container {
   @include centered(flex, space-between, center);
-  padding: 16px 0;
+  padding: 16px 15px;
   @media screen and (min-width: 768px) {
-    padding: 19px 0;
+    padding: 19px 15px;
   }
   @media screen and (min-width: 1200px) {
-    padding: 24px 0;
+    padding: 24px 15px;
   }
 }
 .tablet-desktop-menu {
@@ -22,11 +22,7 @@
     @include centered(flex, space-between, center);
   }
 }
-.tablet-desktop-menu {
-  @media screen and (max-width: 768px) {
-    @include centered(none, inherit, inherit);
-  }
-}
+
 .menu-toggle {
   display: inline-flex;
   margin: 0;
@@ -34,15 +30,7 @@
   border: none;
   background-color: transparent;
 }
-// .menu-button .icon-cross {
-//   display: none;
-// }
-// .menu-button.is-open .icon-cross {
-//   display: block;
-// }
-// .menu-button.is-open .icon-menu {
-//   display: none;
-// }
+
 .menu-toggle {
   min-height: 40px;
   min-width: 40px;
@@ -76,7 +64,7 @@
   background-color: $white-color;
   z-index: 999;
 
-  transform: translateX(100%);
+  transform: translateX(200%);
   transition: transform 250ms ease-in-out;
 }
 .menu-container.is-open {
@@ -100,7 +88,7 @@
   @include centered(flex, space-between, center);
 }
 .navigation-list {
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     margin: 48px auto 302px 0;
   }
   @media screen and(min-width:768px) {
@@ -113,7 +101,7 @@
 }
 
 .navigation-list__item {
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     margin-bottom: 32px;
     &:last-child {
       margin-bottom: 0;
@@ -131,10 +119,10 @@
 }
 .contacts-list {
   @include centered(block, inherit, inherit);
-  @media screen and(max-width:768px) {
+  @media screen and(max-width:767px) {
     margin-bottom: 64px;
   }
-  @media screen and (min-width: 768px) and (max-width: 1200px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-left: 84px;
   }
   @media screen and (min-width: 1200px) {
@@ -151,10 +139,10 @@
     }
   }
   &:first-child {
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       margin-bottom: 32px;
     }
-    @media screen and (min-width: 768px) and (max-width: 1200px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
       margin-bottom: 10px;
     }
   }
@@ -175,7 +163,7 @@
   color: $section-title-color;
   line-height: 1.17;
   transition: color var(--transition-function);
-  @media screen and(max-width:768px) {
+  @media screen and(max-width:767px) {
     font-size: 40px;
     letter-spacing: 0.02;
   }
@@ -197,7 +185,7 @@
   @include centered(flex, inherit, center);
   line-height: 1.14;
   font-size: 24px;
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     .contacts-list__item:first-child & {
       color: $accent-color;
       font-size: 34px;
