--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -14,15 +14,23 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 480px;
+  width: 480px;
   @media screen and (min-width: 768px) {
-    max-width: 768px;
+    width: 768px;
   }
   @media screen and (min-width: 1200px) {
-    max-width: 1600px;
+    width: 1600px;
   }
   margin-right: auto;
   margin-left: auto;
+}
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .section-hero {
+    background-image: url('../images/hero-foto-2x.jpg');
+  }
 }
 .section-hero > .container {
   text-align: center;
