--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -50,7 +50,10 @@ ul {
 }
 
 .container {
-  width: 480px;
+  // min-width: 350px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
   padding: 0 15px;
   margin: auto;
   @media screen and (min-width: 768px) {
