--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -14,7 +14,9 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: 480px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
   }
@@ -23,15 +25,14 @@
   }
   margin-right: auto;
   margin-left: auto;
-}
-@media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .section-hero {
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     background-image: url('../images/hero-foto-2x.jpg');
   }
 }
+
 .section-hero > .container {
   text-align: center;
 }
