--- a/css/main.css
+++ b/css/main.css
@@ -375,7 +375,7 @@ ul {
 @media screen and (max-width: 767px) {
   .navigation-list__link {
     font-size: 40px;
-    letter-spacing: 0.02;
+    letter-spacing: 0.02em;
   }
 }
 
@@ -491,7 +491,7 @@ ul {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
   font-size: 18px;
   line-height: 1.22;
-  letter-spacing: 0.02;
+  letter-spacing: 0.02em;
 }
 
 .mobile-social-list__item:last-child {
