--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -5,13 +5,20 @@
   list-style: none;
   text-decoration: none;
 }
-
+html {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
 body {
   font-family: $roboto;
   color: $primery-text-color;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 h1,
