--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,9 +1,5 @@
 /* Герой */
 .section-hero {
-  padding: 118px 0;
-  @media screen and (min-width: 1200px) {
-    padding: 200px 0;
-  }
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -14,6 +10,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  padding: 118px 0;
   @media screen and (min-width: 480px) {
     width: 480px;
   }
@@ -22,9 +19,9 @@
   }
   @media screen and (min-width: 1200px) {
     width: 1600px;
+    padding: 200px 0;
   }
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
   @media (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
