--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -8,6 +8,8 @@
   // margin-left: -30px;
 }
 .projects-list__item {
+  display: flex;
+  align-items: stretch;
   @media screen and (min-width: 480px) {
     width: 450px;
   }
