--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -1,6 +1,9 @@
 /* Постоянные клиенты */
 .clients-list {
-  @include centered(flex, space-between, center);
+  @include centered(flex, center, center);
+  @media screen and(min-width: 480px) {
+    @include centered(flex, space-between, center);
+  }
   @media screen and(max-width: 1199px) {
     flex-wrap: wrap;
   }
